Estilizado de opciones del catalogo con boxshadow, tamaños y espaciado y centralizado el texto,  con justify y align en flex, quise poner de hover una imagen de fondo de prueba con background image pero no se ve correctamente, NOTA: investigar el pq se ve la imagen pero hasta abajo y repitiendose si lo pongo en width 900 height 900 (uzea grande pero no se ve)

--- a/style.css
+++ b/style.css
@@ -194,12 +194,29 @@ section h2:hover{
 
 .catalogo-categorias{
 
-}
-.catalogo-categoria{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: center;
+
 
 }
+.catalogo-categoria{
+    cursor: pointer;
+    padding: 20px;
+    border: 4px solid black;
+    margin: 20px;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.catalogo-categoria:hover{
+    transition: .35s ease;
+    box-shadow: 10px 10px 0px rgb(255, 0, 0);
+}
 .catalogo-categoria-texto{
-    
+    font-weight: 900;
 }
 
 
